Update tagline and LinkedIn profile link

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Hi, I'm Nandini B S</h1>
-                <p class="tagline">Machine Learning Engineer specializing in end-to-end ML systems, from data ingestion to production inference. Passionate about building scalable, impactful AI solutions.</p>
+                <p class="tagline">Artificial Intelligence and Machine Learning Engineer specializing in end-to-end ML systems, from data ingestion to production inference. Passionate about building scalable, impactful AI solutions.</p>
                 
                 <div class="stats">
                     <div class="stat-item">
@@ -735,7 +735,7 @@
                     <span>📧</span>
                     <span>Email</span>
                 </a>
-                <a href="https://www.linkedin.com/in/nandini-b-s-b10b79194/" target="_blank" class="social-link">
+                <a href="https://www.linkedin.com/in/nandini-b-s-32b946382/" target="_blank" class="social-link">
                     <span>💼</span>
                     <span>LinkedIn</span>
                 </a>
