Add education section with degree details
Added education section with details about Master's and Bachelor's degrees.

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
         @media (max-width: 768px) {
             nav ul {
                 gap: 1rem;
+                font-size: 0.9rem;
             }
 
             .hero .stats {
@@ -534,6 +535,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -575,7 +577,7 @@
                 <div class="experience-header">
                     <div>
                         <div class="experience-title">Generative AI Developer / Senior ML Engineer</div>
-                        <div class="experience-company">Databricks - San Francisco,United States</div>
+                        <div class="experience-company">Databricks - San Francisco, United States</div>
                     </div>
                     <div class="experience-date">Aug 2023 – Present</div>
                 </div>
@@ -592,7 +594,7 @@
                 <div class="experience-header">
                     <div>
                         <div class="experience-title">AI Engineer</div>
-                        <div class="experience-company">Abbott - Bengaluru,India</div>
+                        <div class="experience-company">Abbott - Bengaluru, India</div>
                     </div>
                     <div class="experience-date">Oct 2021 – Dec 2022</div>
                 </div>
@@ -608,7 +610,7 @@
                 <div class="experience-header">
                     <div>
                         <div class="experience-title">Data Scientist / ML Engineer</div>
-                        <div class="experience-company">TransUnion - Bengaluru,India</div>
+                        <div class="experience-company">TransUnion - Bengaluru, India</div>
                     </div>
                     <div class="experience-date">Mar 2020 – Sept 2021</div>
                 </div>
@@ -721,6 +723,41 @@
                     <span class="tech-badge">RAG</span>
                     <span class="tech-badge">NLP</span>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="education" class="section-fade">
+        <h2>Education</h2>
+        <div class="experience-grid">
+            <div class="experience-card">
+                <div class="experience-header">
+                    <div>
+                        <div class="experience-title">Master of Science in Computer Science</div>
+                        <div class="experience-company">University of Alabama at Birmingham</div>
+                    </div>
+                    <div class="experience-date">Jan 2023 – Apr 2024</div>
+                </div>
+                <ul class="experience-highlights">
+                    <li>Specialized in Machine Learning and Artificial Intelligence</li>
+                    <li>Completed advanced coursework in Deep Learning, Natural Language Processing, and Distributed Systems</li>
+                    <li>Developed end-to-end ML pipeline prototypes and real-time recommendation systems as capstone projects</li>
+                </ul>
+            </div>
+
+            <div class="experience-card">
+                <div class="experience-header">
+                    <div>
+                        <div class="experience-title">Bachelor of Engineering in Computer Science</div>
+                        <div class="experience-company">Visvesvaraya Technological University, Bengaluru, India</div>
+                    </div>
+                    <div class="experience-date">Aug 2018 – Aug 2022</div>
+                </div>
+                <ul class="experience-highlights">
+                    <li>Strong foundation in algorithms, data structures, and software engineering principles</li>
+                    <li>Focused on machine learning, data analytics, and distributed system design</li>
+                    <li>Completed academic projects in predictive modeling and data pipeline optimization</li>
+                </ul>
             </div>
         </div>
     </section>
